# python_template

./: .dockerignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  dev.Dockerfile  dev.env.Dockerfile  dev.lint.Dockerfile  pyproject.toml  requirements.txt  unittest_example.py
.github/workflows/: build.yml  format.yml  lint.yml  test.yml
PROJECT_NAME/: main.py
src/tests/: __main__.py  test_utils_generic.py  unittest_example.py
tests/: __init__.py
