[tool.poetry]
name = "pyproject"
version = "1.0.0"
description = "PUT A DESCRIPTION HERE!"
authors = ["Matthew Gleich <matthewgleich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
